“features-spec-homes実装”

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,6 +7,7 @@
     <h1>Topページです</h1>
     <p>
       topです
+      <%= link_to "サインイン", signup_path, class: "btn btn-lg btn-primary" %>
     </p>
   </body>
 </html>
