--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,68 @@
 // Place all the styles related to the Homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+*{
+  margin:0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+}
+
+/* header */
+
+header {
+  height: 80px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  margin: 0 auto;
+  position: relative;
+}
+
+.logo {
+  height: 60px;
+  width: 60px;
+  margin: 10px 10px;
+  float: left;
+}
+
+.site-introduction {
+  margin-top: 25px;
+  float: left;
+}
+
+.search {
+  width: 300px;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform : translate(-50%,-50%);
+  transform : translate(-50%,-50%);
+}
+
+.hi-search {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 55%;
+  -webkit-transform : translate(-50%,-55%);
+  transform : translate(-50%,-55%);
+}
+
+.nav-link {
+  float: right;
+  margin-right: 30px;
+  margin-top: 25px;
+}
+
+.btn {
+  color: white;
+  background-color: #239b76;
+  opacity: 0.8;
+  border-radius: 4px;
+  height: 30px;
+  width: 80px;
+}
