“ユーザー登録_登録失敗メッセージまで”

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,10 @@
 
   <body>
     <%= yield %>
+    <br>
+    <br>
+    <br>
+    <%= debug(params) if Rails.env.development? %>
+
   </body>
 </html>
