--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,8 +5,29 @@
   </head>
   <body>
     <h1>サインインです</h1>
-    <p>
     <%= link_to "Topへ", root_path, class: "btn btn-lg btn-primary" %>
-    </p>
+
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= form_for(@user) do |f| %>
+          <%= render 'shared/error_messages' %>
+
+          <%= f.label :name, "ユーザーID" %>
+          <%= f.text_field :name %>
+
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email %>
+
+          <%= f.label :password, "パスワード" %>
+          <%= f.password_field :password %>
+
+          <%= f.label :password_confirmation, "パスワード確認" %>
+          <%= f.password_field :password_confirmation %>
+
+          <%= f.submit "新規登録", class: "btn" %>
+        <% end %>
+      </div>
+  </div>
+
   </body>
 </html>
