--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,6 +25,9 @@
           <%= f.label :password_confirmation, "パスワード確認" %>
           <%= f.password_field :password_confirmation %>
 
+          <%= f.label :profile, "自己紹介文" %>
+          <%= f.text_field :profile %>
+
           <%= f.submit "新規登録", class: "btn" %>
         <% end %>
       </div>
