“ユーザー画像アップロード実装”

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,6 +27,13 @@
 
           <%= f.label :profile, "自己紹介文" %>
           <%= f.text_field :profile %>
+          
+          <%= f.file_field :picture %>
+            <% if @user.picture? %>
+              <%= image_tag @user.picture.thumb.url %>
+            <% else %>
+              <%= image_tag "images.png" %>
+            <% end %>
 
           <%= f.submit "新規登録", class: "btn" %>
         <% end %>
