--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
 
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@user, url: signup_path) do |f| %>
+        <%= form_with model: @user do |f| %>
           <%= render 'shared/error_messages' %>
 
           <%= f.label :name, "ユーザーID" %>
@@ -28,12 +28,7 @@
           <%= f.label :profile, "自己紹介文" %>
           <%= f.text_field :profile %>
           
-          <%= f.file_field :picture %>
-          <% if @user.picture? %>
-            <%= image_tag @user.picture.thumb.url %>
-          <% else %>
-            <%= image_tag "images.png" %>
-          <% end %>
+          <%= react_component('Preview') %>
 
           <%= f.submit "新規登録", class: "btn" %>
         <% end %>
