--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,27 @@
 <header>
-  <%= link_to image_tag("ぱぱらちあ.jpg", class:"logo"), "/" %>
-  <p class="site-introduction">サイト紹介的な文章</p>
+  <div>
+    <%= link_to image_tag("ぱぱらちあ.jpg", class:"site-logo"), "/" %>
+    <p class="site-introduction">QNSへようこそ！</p>
+  </div>
 
-  <div class="search">
-    <form action="#" method="get">
-          <input type="text" name="name" >
-        </form>
-          <%= link_to "高度な検索", '#'%>
-      </div>
-
-      <% if logged_in? %>
-        <%= link_to "プロフィール", current_user, class:"nav-link btn" %>
-        <%= link_to "編集", edit_user_path(current_user), class:"nav-link btn" %>
-        <%= link_to "ログアウト", logout_path, method: :delete, class:"nav-link btn" %>
-      <% else %>
-        <%= link_to "ログイン", login_path, class:"nav-link btn" %>
-        <%= link_to "サインイン", signup_path, class:"nav-link btn", 
-            data: {"turbolinks" => false} %>
-      <% end %>
+  <div class="navi-links">
+    <% if logged_in? %>
+      <ul>
+        <li><%= link_to "プロフィール", current_user, class:"navi-btn" %></li>
+        <li><%= link_to "編集", edit_user_path(current_user), class:"navi-btn" %></li>
+        <li><%= link_to "ログアウト", logout_path, method: :delete, class:"navi-btn" %></li>
+        <li><%= link_to "検索", '#', class:"navi-btn" %></li>
+        <li><%= link_to "ホーム", root_path, class:"navi-btn" %></li>
+      </ul>
+    <% else %>
+      <ul>
+        <li><%= link_to "ゲストログイン", '#', class:"navi-btn" %></li>
+        <li><%= link_to "ログイン", login_path, class:"navi-btn" %></li>
+        <li><%= link_to "サインイン", signup_path, class:"navi-btn", 
+                                    data: {"turbolinks" => false} %></li>
+        <li><%= link_to "検索", '#', class:"navi-btn" %></li>
+        <li><%= link_to "ホーム", root_path, class:"navi-btn" %></li>
+      </ul>
+    <% end %>
+  </div>
 </header>
