--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
 
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-       <%= form_for(@user) do |f| %>
+       <%= form_with model: @user, local: true do |f| %>
           <%= render 'shared/error_messages' %>
 
           <%= f.label :name, "ユーザーID" %>
@@ -21,7 +21,8 @@
 
           <%= f.label :profile, "自己紹介文" %>
           <%= f.text_field :profile %>
-          
+
+          <img src="<%= "#{@user.picture}" %>">
           <%= react_component('Preview') %>
 
           <%= f.submit "更新", class: "btn" %>
