--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html>
 <%= render 'layouts/header' %>
-  <head>
-    <title>サインイン</title>
-  </head>
-  <body>
-    <h1>サインインです</h1>
-    <%= link_to "Topへ", root_path, class: "btn btn-lg btn-primary" %>
 
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+<head>
+  <title>サインイン</title>
+</head>
+
+<body>
+  <h1>サインインです</h1>
+  <%= link_to "Topへ", root_path, class: "btn btn-lg btn-primary" %>
+
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
       <%= form_with model: @user, url: signup_path, local: true do |f| %>
-          <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages' %>
 
-          <%= f.label :name, "ユーザーID" %>
-          <%= f.text_field :name %>
+      <%= f.label :name, "ユーザーID" %>
+      <%= f.text_field :name %>
 
-          <%= f.label :email, "メールアドレス" %>
-          <%= f.email_field :email %>
+      <%= f.label :email, "メールアドレス" %>
+      <%= f.email_field :email %>
 
-          <%= f.label :password, "パスワード" %>
-          <%= f.password_field :password %>
+      <%= f.label :password, "パスワード" %>
+      <%= f.password_field :password %>
 
-          <%= f.label :password_confirmation, "パスワード確認" %>
-          <%= f.password_field :password_confirmation %>
+      <%= f.label :password_confirmation, "パスワード確認" %>
+      <%= f.password_field :password_confirmation %>
 
-          <%= f.label :profile, "自己紹介文" %>
-          <%= f.text_field :profile %>
-          
-          <%= react_component('Preview') %>
+      <%= f.label :profile, "自己紹介文" %>
+      <%= f.text_field :profile %>
 
-          <%= f.submit "新規登録", class: "btn" %>
-        <% end %>
-      </div>
+      <%= image_tag @user.picture.url if @user.picture? %>
+      <%= f.file_field :picture %>
+
+      <%= f.submit "新規登録", class: "btn" %>
+      <% end %>
+    </div>
   </div>
 
-  </body>
+</body>
+
 </html>
