--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
+<%= javascript_pack_tag 'preview.js' %>
 <%= render 'layouts/header' %>
 
 <head>
   <title>サインイン</title>
 </head>
 
-
 <body>
+
   <h1>サインインです</h1>
   <%= link_to "Topへ", root_path, class: "btn btn-lg btn-primary" %>
-
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <%= form_with model: @user, url: signup_path, local: true do |f| %>
@@ -31,8 +31,11 @@
       <%= f.label :profile, "自己紹介文" %>
       <%= f.text_field :profile %>
 
-      <%= image_tag @user.picture.url if @user.picture? %>
-      <%= f.file_field :picture %>
+      <%= f.label :picture, "画像" %>
+      <%= f.file_field :picture, id: "picture-select-btn"%>
+      <div id="post-image-prev">
+        <%= image_tag @user.picture.url if @user.picture? %>
+      </div>
 
       <%= f.submit "新規登録", class: "btn" %>
       <% end %>
