“ユーザー編集の画像プレビュー実装”

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
 <%= javascript_pack_tag 'preview.js' %>
-<%= render 'layouts/header' %>
+<html>
 
+<%= render 'layouts/header' %>
 
 <head>
   <title>ユーザー編集</title>
@@ -27,16 +27,15 @@
       <%= f.text_field :profile %>
 
       <%= f.label :picture, "画像" %>
-      <!--
-      <%= image_tag @user.picture.url if @user.picture? %>
-      <%= f.file_field :picture %>
-      -->
       <%= f.file_field :picture, id: "picture-select-btn"%>
-      <div id="post-image-prev">
-        <%= image_tag @user.picture.url if @user.picture? %>
+      <div id="post-image-prev"></div>
+      <div id="user-picture">
+        <%= image_tag @user.picture.url if @user.picture?%>
       </div>
 
-      <%= f.submit "更新", class: "btn" %> <% end %>
+
+      <%= f.submit "更新", class: "btn" %>
+      <% end %>
     </div>
   </div>
 
