--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,8 +33,9 @@
 
       <%= f.label :picture, "画像" %>
       <%= f.file_field :picture, id: "picture-select-btn"%>
-      <div id="post-image-prev">
-        <%= image_tag @user.picture.url if @user.picture? %>
+      <div id="post-image-prev"></div>
+      <div id="user-picture">
+        <%= image_tag @user.picture.url if @user.picture?%>
       </div>
 
       <%= f.submit "新規登録", class: "btn" %>
