“JS読み込みの個別化”

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -30,12 +30,13 @@ header {
   list-style: none;
   display: table;
 }
- 
+
 .navi-btn {
   text-decoration: none;
+  background-color: rgb(78, 78, 78);
   color: #fff;
   font-weight: bold;
   padding: 20px;
-  
+  background-color: rgb(78, 78, 78);
+  border: none;
 }
-
